# sp25_taxi

./: pyproject.toml
notebooks/: 01_fetch_data.ipynb  02_validate_and_save.ipynb  04_transform_ts_data_into_features_and_targets.ipynb  05_transform_raw_data_into_features_and_targets.ipynb  07_baseline_models.ipynb  08_xgboost_model.ipynb  09_lightgbm_model.ipynb  10_lgm_with_fe.ipynb  11_lgm_hyper.ipynb  12_load_features_hopsworks.ipynb  13_feature_pipeline.ipynb  14_model_training_pipeline.ipynb  15_predict_using_hopsworks_model.ipynb  16_inference_pipeline.ipynb  17_fetch_predictions.ipynb  19_retraining_model.ipynb  ARIMA.ipynb  ARMA.ipynb  prophet_model.ipynb  test_frontend_v2.ipynb
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/199676167444187175/: meta.yaml
notebooks/mlruns/199676167444187175/186ae317eafc41d2bdcebec597fb8fb1/: meta.yaml
notebooks/mlruns/199676167444187175/186ae317eafc41d2bdcebec597fb8fb1/metrics/: mean_absolute_error
notebooks/mlruns/199676167444187175/186ae317eafc41d2bdcebec597fb8fb1/tags/: mlflow.runName  mlflow.source.name
src/: experiment_utils.py  feature_pipeline.py  inference.py  plot_utils.py
